2004-02-01  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (multiple outputs): New node.

2004-01-31  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/regex.m4: Do not AC_SUBST(LIBOBJS), and quote most arguments.
	* tests/regex.test: New file.
	* tests/Makefile.am (TESTS): Add regex.test.

2004-01-28  Alexandre Duret-Lutz  <adl@gnu.org>

	* NEWS: Summarize recent changes.

	* Makefile.am (maintainer-check): Check for unquoted $(DESTDIR) uses.
	* lib/am/data.am, lib/am/distdir.am, lib/am/java.am, lib/am/libs.am,
	lib/am/lisp.am, lib/am/ltlib.am, lib/am/mans.am, lib/am/progs.am,
	lib/am/python.am, lib/am/scripts.am, lib/am/texinfos.am: Quote
	installation paths in install, uninstall, and installcheck rules,
	as well as in am__installdirs variables.  This is for the sake
	of paths containing spaces.
	* lib/am/install.am (installdirs-am, installdirs): Do not try
	to create "" directories.
	* test/instspc.test: New file.
	* test/Makefile.am (TESTS): Add instspc.test.
	Report from James Amundson.

	* doc/automake.texi (Not Enough, Third-Party Makefiles): New nodes.
	(Extending): Make it a subsection of Not Enough.

2004-01-23  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/depout.m4 (_AM_OUTPUT_DEPENDENCY_COMMANDS): Use `s/xx//p'
	instead of `/xx/ s///p'; the latter fails when GNU sed is run with
	POSIXLY_CORRECT.  Also strip superfluous -e.
	Report from Miloslav Trmac.

2004-01-22  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/lex5.test: Sleep before calling AUTOMAKE the second time,
	this fixes a spurious failure reported by Andreas Schwab.  Also
	make sure ylwrap is not installed unless needed, and exercise
	--no-force.

2004-01-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>  (tiny change)

	* doc/automake.texi (Dist): Document limitations of distcheck-hook
	and DISTCHECK_CONFIGURE_FLAGS with regard to subdirs and
	subpackages.

2004-01-20  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Upgrading): New node.

2004-01-13  Alexandre Duret-Lutz  <adl@gnu.org>